--- a/src/pages/skills/Skills.css
+++ b/src/pages/skills/Skills.css
@@ -1,8 +1,96 @@
-.body {
-    background-color:  #141c2c;
-    padding: 1rem 0;
+.skills-container {
+    padding: 4rem;
+    background: linear-gradient(135deg, #141c2c 0%, #1d2a42 100%);
     border-radius: 20px;
-    align-items: center;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    color: white;
     position: relative;
-
+    overflow: hidden;
 }
+
+.title {
+    background: linear-gradient(to right, #3886bb, #855bb1);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.description {
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.groups {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: center;
+}
+
+.group {
+    border: 2px solid #f5d742;
+    border-radius: 15px;
+    padding: 1rem;
+    width: 250px;
+    text-align: center;
+}
+
+.group h3 {
+    margin-bottom: 1rem;
+    color: #f5d742;
+    font-size: 1.1rem;
+}
+
+.icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.icon-wrapper {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .icon-wrapper .icon {
+    font-size: 2rem;  /* Altere o tamanho do ícone */
+    color: white;     /* Cor do ícone */
+    transition: transform 0.3s, color 0.3s;
+  }
+  
+  .icon-wrapper:hover .icon {
+    transform: scale(1.1);
+    color: #f5d742; /* Altere a cor ao passar o mouse */
+  }
+  
+  .tooltip {
+    visibility: hidden;
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 0.3rem 0.5rem;
+    position: absolute;
+    z-index: 1;
+    bottom: 110%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.3s;
+    font-size: 0.75rem;
+    white-space: nowrap;
+  }
+  
+  .icon-wrapper:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+  }
