--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -5,15 +5,17 @@
     padding: 4rem;
     gap: 2rem;
     color: white;
-    background: linear-gradient(135deg, #141c2c 0%, #1d2a42 100%);
+    /* background: linear-gradient(135deg, #141c2c 0%, #1d2a42 100%); */
     border-radius: 20px;
     flex-wrap: wrap;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); */
     position: relative;
     overflow: hidden;
+    height: 90vh;
+
 }
 
-.about-container::after {
+/* .about-container::after {
     content: '';
     position: absolute;
     top: -50px;
@@ -22,7 +24,7 @@
     height: 150px;
     background: rgba(133, 91, 177, 0.1);
     border-radius: 50%;
-}
+} */
 
 .about-text {
     flex: 1;
