--- a/src/pages/contacts/Contacts.css
+++ b/src/pages/contacts/Contacts.css
@@ -1,4 +1,3 @@
-/* Contact.css */
 .contact-container {
     display: flex;
     justify-content: center;
@@ -6,15 +5,17 @@
     min-height: 80vh;
     padding: 2rem;
     color: white;
-    background: linear-gradient(135deg, #141c2c 0%, #1d2a42 100%);
+    /* background: linear-gradient(135deg, #141c2c 0%, #1d2a42 100%); */
     border-radius: 20px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); */
     position: relative;
     overflow: hidden;
     margin: 2rem;
+    height: 90vh;
+
 }
 
-.contact-container::after {
+/* .contact-container::after {
     content: '';
     position: absolute;
     top: -50px;
@@ -23,7 +24,7 @@
     height: 150px;
     background: rgba(133, 91, 177, 0.1);
     border-radius: 50%;
-}
+} */
 
 .contact-content {
     text-align: center;
@@ -94,7 +95,6 @@
     font-size: 0.9rem;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
     .contact-icons {
         flex-direction: column;
