--- a/src/pages/skills/Skills.css
+++ b/src/pages/skills/Skills.css
@@ -1,8 +1,6 @@
 .skills-container {
     padding: 4rem;
-    /* background: linear-gradient(135deg, #141c2c 0%, #1d2a42 100%); */
     border-radius: 20px;
-    /* box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2); */
     color: white;
     position: relative;
     overflow: hidden;
@@ -33,7 +31,7 @@
 }
 
 .group {
-    border: 2px solid #f5d742;
+    border: 2px solid #9898c5;
     border-radius: 15px;
     padding: 1rem;
     width: 250px;
@@ -42,7 +40,7 @@
 
 .group h3 {
     margin-bottom: 1rem;
-    color: #f5d742;
+    color: #8787fd;
     font-size: 1.1rem;
 }
 
@@ -70,7 +68,7 @@
   
   .icon-wrapper:hover .icon {
     transform: scale(1.1);
-    color: #f5d742; 
+    color: #7676CE; 
   }
   
   .tooltip {
