--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,10 +1,31 @@
 .home-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem;
+    height: 80vh;
+    margin: 20px;
+    background-color: transparent;
+}
+
+.home-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    gap: 2rem;
+}
+
+.text-section {
+    flex: 1;
+    min-width: 280px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 4rem;
-    height: 80vh;
+    text-align: left;
 }
 
 .intro-text {
@@ -14,7 +35,7 @@
 }
 
 .typing-text {
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 2vw, 2rem);
     background: linear-gradient(90deg, #3886bb, #855bb1);
     -webkit-background-clip: text;
     background-clip: text;
@@ -24,9 +45,44 @@
     border-right: 2px solid #855bb1;
     width: 0;
     animation: typing 4s steps(30, end) forwards, blink 0.75s step-end infinite;
-    max-width: 100%;
-    font-size: clamp(1.5rem, 2vw, 2rem);
 }
+
+.image-section {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.image-wrapper {
+    background: linear-gradient(135deg, #855bb1, #3886bb);
+    animation: animateGradient 3s ease infinite;
+    background-size: 600% 600%;
+    border-radius: 50%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 390px;
+    height: 390px;
+    overflow: hidden;
+}
+
+.image-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+/* ANIMAÇÃO ILUSTRAÇÃO */
+
+@keyframes animateGradient {
+    0% {background-position: 0% 50%;}
+    50% {background-position: 100% 50%;}
+    100% {background-position: 0% 50%;}
+  }
+
+/* ANIMAÇÃO TEXTO */
 
 @keyframes typing {
     from { width: 0; }
@@ -34,7 +90,7 @@
 }
 
 @keyframes blink {
-    50% {border-color: transparent;}
+    50% { border-color: transparent; }
 }
 
 /* RESPONSIVIDADE */
@@ -42,6 +98,15 @@
 @media (max-width: 768px) {
     .home-container {
         padding: 2rem;
+        align-items: center;
+        text-align: center;
+    }
+
+    .home-wrapper {
+        flex-direction: column;
+    }
+
+    .text-section {
         align-items: center;
         text-align: center;
     }
@@ -58,5 +123,10 @@
     @keyframes typing {
         from { width: 0; }
         to { width: 22ch; }
+    }
+
+    .image-wrapper {
+        width: 200px;
+        height: 200px;
     }
 }
