--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -16,6 +16,7 @@
 .about-text {
     flex: 1;
     min-width: 300px;
+    max-width: 100%;
 }
 
 .about-text h2 {
@@ -28,6 +29,7 @@
     margin-bottom: 1rem;
     line-height: 1.6;
     text-align: justify;
+    word-break: break-word;
 }
 
 .about-icons {
@@ -43,8 +45,8 @@
     content: '';
     position: absolute;
     left: 15px;
-    top: 50%; 
-    transform: translateY(-50%); 
+    top: 50%;
+    transform: translateY(-50%);
     height: 80%;
     width: 2px;
     background: #855bb1;
@@ -72,14 +74,14 @@
     font-size: 0.95rem;
 }
 
- .circle {
+.circle {
     position: absolute;
     left: -30px;
     width: 12px;
     height: 12px;
     background-color: #855bb1;
     z-index: 2;
-    margin-left: 10px; 
+    margin-left: 10px;
 }
 
 /* responsividade */
@@ -101,6 +103,14 @@
 }
 
 @media (max-width: 600px) {
+    .about-container {
+        padding: 2rem 1rem;
+    }
+
+    .about-text {
+        width: 100%;
+    }
+
     .about-text h2 {
         font-size: 1.6rem;
     }
