--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -9,20 +9,25 @@
     flex-wrap: wrap;
     position: relative;
     overflow: hidden;
-    height: 90vh;
-
 }
 
 .about-text {
     flex: 1;
-    min-width: 300px;
     max-width: 100%;
+    width: 100%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .about-text h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    color: #855bb1;
+    background: linear-gradient(to right, #3886bb, #855bb1);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    text-align: center;
 }
 
 .about-text p {
@@ -92,23 +97,25 @@
         align-items: flex-start;
         padding: 3rem 2rem;
         height: auto;
-    }
-
-    .about-icons::before {
-        left: 15px;
-        top: 0;
-        transform: none;
-        height: 100%;
+        max-width: 100%;
     }
 }
 
 @media (max-width: 600px) {
+    body, html {
+        overflow-x: hidden; 
+        width: 100%;
+    }
     .about-container {
         padding: 2rem 1rem;
+        width: 100%;
+        max-width: 100vw;
+        margin: 0;
     }
 
     .about-text {
         width: 100%;
+        padding-right: 0;
     }
 
     .about-text h2 {
