--- a/src/pages/contacts/Contacts.css
+++ b/src/pages/contacts/Contacts.css
@@ -25,7 +25,8 @@
     -webkit-text-fill-color: transparent;
     font-size: 2.5rem;
     font-weight: bold;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    text-align: center;
 }
 
 .subtitle {
